fixed flash and  navbar spacings

--- a/src/assets/stylesheets/app.scss
+++ b/src/assets/stylesheets/app.scss
@@ -6,6 +6,10 @@
   overflow: hidden;
 }
 
+body {
+  background-color: #1c1f4a;
+}
+
 .page {
   width: 100vw;
   height: 100vh;
