--- a/src/assets/stylesheets/navbar.scss
+++ b/src/assets/stylesheets/navbar.scss
@@ -1,3 +1,18 @@
+@-webkit-keyframes slide {
+  100% {
+    left: 0;
+  }
+}
+
+@keyframes slide {
+  0% {
+    transform: scale(0%);
+  }
+  100% {
+    transform: scale(100%);
+  }
+}
+
 .divider-c {
   width: 100%;
   height: 100px;
@@ -126,13 +141,14 @@
   height: 5%;
   border-radius: 100px;
   visibility: hidden;
+  animation: slide 0.3s ease-in-out;
 }
 
 .navbar-socialbar {
   width: 20%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
 }
 
